--- a/app/user.html
+++ b/app/user.html
@@ -72,7 +72,7 @@
                                     <h2>{{user.email}}</h2>
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <span>Skills:</span>
+                                            <strong>Skills:</strong>
                                             <ul>
                                                 <li ng-repeat="skill in skills">{{skill.$value}}</li>
                                             </ul>
@@ -150,6 +150,12 @@
                     </div>
                 </md-content>
             </main>
+
+            <!-- toast -->
+            <div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button type="button" class="mdl-snackbar__action"></button>
+            </div>
         </div>
     </div>
 
